changed the portfolio pictures

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h1>Awonuga Olaide</h1>
             <h3>A WEB <SPan>DEVELOPER.</SPan></h3>
             <P>Innovative Front End Developer with good experience in maintaining and building web pages. I like dabbling in  various parts of frontend development, like 
-                to  learn about new technologies and write technical articles.</P>
+                to learn about new technologies and write technical articles.</P>
             <div class="button">
                 <a href="https://drive.google.com/file/d/1wqOt5IEQsG-HEa35Ygr7dUBSmyR4gm67/view?usp=share_link" target="_blank" class="btn">View Resume</a>
                 <a href="https://drive.google.com/file/d/1oXNzriTM-94lG3iBQSXtxHA2C5SjwLNM/view?usp=share_link" target="_blank" class="btn1">Cover Letter</a>
@@ -58,7 +58,7 @@
                  changes through CSS updates and behavior through JavaScript/react updates. Writing HTML, design websites as it should be, as a front end developer
                   I want to solve peoples problems and real world problem making life easier through codes.
                   I ensure clients are satisfied by me creating a suitable wbsites for their needs. <br> 
-                 <br> Below are technologies I have worked with.</p>
+                 <br> Below are the technologies I have worked with.</p>
                 <div>
                     <h3>
                     <span>HTML</span>
@@ -146,6 +146,16 @@
             </div>
 
             <div class="portfolio-section">
+
+                 <div class="row">
+                    <img src="./images/lapgames.jpg" alt="">
+                    <div class="layer">
+                        <h4>My First Project</h4>
+                        <p>This was my ever first project</p>
+                        <a href="https://firsttimeproject.netlify.app/" target="_blank"><i class='bx bx-link-external' ></i></a>
+                    </div>
+                </div>
+
                 <div class="row">
                     <img src="./images/eyes lahes pic.jpg" alt="">
                     <div class="layer">
@@ -175,14 +185,7 @@
                     </div>
                 </div>
 
-                  <div class="row">
-                    <img src="./images/ruler pic.jpg" alt="">
-                    <div class="layer">
-                        <h4>My First Project</h4>
-                        <p>This was my ever first project</p>
-                        <a href="https://firsttimeproject.netlify.app/" target="_blank"><i class='bx bx-link-external' ></i></a>
-                    </div>
-                </div>
+                 
             </div>
     </section>
 
