changed portfolio images

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="layer">
                         <h4>My First Project</h4>
                         <p>This was my ever first project</p>
-                        <a href="https://firsttimeproject.netlify.app/" target="_blank"><i class='bx bx-link-external' ></i></a>
+                        <a href=""><i class='bx bx-link-external' ></i></a>
                     </div>
                 </div>
 
