Changed my portfolio images

--- a/index.html
+++ b/index.html
@@ -151,8 +151,18 @@
                     <img src="./images/lapgames.jpg" alt="">
                     <div class="layer">
                         <h4>My First Project</h4>
-                        <p>This was my ever first project</p>
+                        <p>A game website I designed </p>
                         <a href=""><i class='bx bx-link-external' ></i></a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <img src="./images/kimox website.jpg" alt="">
+                    <div class="layer">
+                        <h4>Kimox Website</h4>
+                        <p> A Kimox website I designed</p>
+                        <a href="https://olaidekimox.netlify.app/" target="_blank"><i class='bx bx-link-external' ></i></a>
+
                     </div>
                 </div>
 
@@ -175,15 +185,7 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <img src="./images/kimox website.jpg" alt="">
-                    <div class="layer">
-                        <h4>Kimox Website</h4>
-                        <p> A Kimox website I designed</p>
-                        <a href="https://olaidekimox.netlify.app/" target="_blank"><i class='bx bx-link-external' ></i></a>
-
-                    </div>
-                </div>
+              
 
                  
             </div>
