changed portfolio images

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="portfolio-section">
 
                  <div class="row">
-                    <img src="./images/lapgames.jpg" alt="">
+                    <img src="./images/game pad1.jpg" alt="">
                     <div class="layer">
                         <h4>My First Project</h4>
                         <p>A game website I designed </p>
