--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <h1>Awonuga Olaide</h1>
             <h3>A WEB <SPan>DEVELOPER.</SPan></h3>
-            <P>Innovative Front End Developer with good experience in maintaining and building web pages. I like dabbling in  various parts of frontend development, like 
+            <P>Innovative Front End Developer with good experience in maintaining and building web pages. I like dabbling in various parts of frontend development, I like 
                 to learn about new technologies and write technical articles.</P>
             <div class="button">
                 <a href="https://drive.google.com/file/d/1wqOt5IEQsG-HEa35Ygr7dUBSmyR4gm67/view?usp=share_link" target="_blank" class="btn">View Resume</a>
@@ -57,7 +57,7 @@
                  I like to learn about new technologies and write technical articles, Creating the highest efficiencies to handle presentational
                  changes through CSS updates and behavior through JavaScript/react updates. Writing HTML, design websites as it should be, as a front end developer
                   I want to solve peoples problems and real world problem making life easier through codes.
-                  I ensure clients are satisfied by me creating a suitable wbsites for their needs. <br> 
+                  I ensure clients are satisfied by me creating a suitable websites for their needs. <br> 
                  <br> Below are the technologies I have worked with.</p>
                 <div>
                     <h3>
