--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <P>Innovative Front End Developer with good experience in maintaining and building web pages. I like dabbling in various parts of frontend development, I like 
                 to learn about new technologies and write technical articles.</P>
             <div class="button">
-                <a href="https://drive.google.com/file/d/1wqOt5IEQsG-HEa35Ygr7dUBSmyR4gm67/view?usp=share_link" target="_blank" class="btn">View Resume</a>
-                <a href="https://drive.google.com/file/d/1oXNzriTM-94lG3iBQSXtxHA2C5SjwLNM/view?usp=share_link" target="_blank" class="btn1">Cover Letter</a>
+                <a href="https://drive.google.com/file/d/1EAgUcqJtJKa9H02pqliL4CMyOQmWooor/view?usp=sharing" target="_blank" class="btn">View Resume</a>
+                <a href="https://drive.google.com/file/d/1EAgUcqJtJKa9H02pqliL4CMyOQmWooor/view?usp=sharing" target="_blank" class="btn1">Cover Letter</a>
             </div>
         </div> 
 
