--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </header>
 
-    <section class="home" id="home">
+    <section class="home animeX" id="home">
         <div class="home-text">
             <div class="swipe">
                 <span class="first">Hello</span>
@@ -46,7 +46,7 @@
     </section>
 
 
-    <section class="about" id="about">
+    <section class="about animeX" id="about">
         <div class="about-img">
             <img src="./images/about image.png" alt="">
         </div>
@@ -89,7 +89,7 @@
         </div>
     </section>
 
-    <section class="skills" id="skills">
+    <section class="skills animeX" id="skills">
         <div class="skills-text">
             <p>What My Skills Are</p>
             <h2><span>My</span> Skills</h2>
@@ -139,7 +139,7 @@
         </div>
     </section>
 
-    <section class="portfolio" id="portfolio">
+    <section class="portfolio animeX" id="portfolio">
         <div class="skills-text">
             <p>Portfolio</p>
             <h2><span>My</span> Projects</h2>
@@ -191,7 +191,7 @@
             </div>
     </section>
 
-    <section class="contact" id="contact">
+    <section class="contact animeX" id="contact">
         <div class="contact-part">
             <h2>Contact <span>Me</span></h2>
             <p>Got projects you want to work on, or you want us to 
