--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
     </header>
 
-    <section class="home animeX" id="home">
+    <section class="home" id="home">
         <div class="home-text">
             <div class="swipe">
                 <span class="first">Hello</span>
@@ -147,7 +147,7 @@
 
             <div class="portfolio-section">
 
-                 <div class="row">
+                 <div class="row animeX">
                     <img src="./images/game pad1.jpg" alt="">
                     <div class="layer">
                         <h4>My First Project</h4>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row animeX">
                     <img src="./images/kimox website.jpg" alt="">
                     <div class="layer">
                         <h4>Kimox Website</h4>
@@ -166,21 +166,21 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row animeX">
                     <img src="./images/eyes lahes pic.jpg" alt="">
                     <div class="layer">
                         <h4>Lash website</h4>
                         <p> A lash website I designed</p>
-                        <a href="https://lasheswebsite.netlify.app/" target="_blank"><i class='bx bx-link-external' ></i></a>
+                        <a href="" target="_blank"><i class='bx bx-link-external' ></i></a>
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row animeX">
                     <img src="./images/comp pic.jpg" alt="">
                     <div class="layer">
                         <h4>Portfolio Website</h4>
-                        <p>My ever first portfolio website designed with React</p>
-                        <a href="https://olaidepersonal.netlify.app/" target="_blank"><i class='bx bx-link-external' ></i></a>
+                        <p>A portfolio website designed with React</p>
+                        <a href="" target="_blank"><i class='bx bx-link-external' ></i></a>
 
                     </div>
                 </div>
