--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
     <section class="about animeX" id="about">
-        <div class="about-img">
+        <div class="about-img animeX">
             <img src="./images/about image.png" alt="">
         </div>
         <div class="about-part">
