--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
     <section class="about animeX" id="about">
-        <div class="about-img animeX">
+        <div class="about-img">
             <img src="./images/about image.png" alt="">
         </div>
         <div class="about-part">
@@ -147,7 +147,7 @@
 
             <div class="portfolio-section">
 
-                 <div class="row animeX">
+                 <div class="row">
                     <img src="./images/game pad1.jpg" alt="">
                     <div class="layer">
                         <h4>My First Project</h4>
