--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="layer">
                         <h4>My First Project</h4>
                         <p>A game website I designed </p>
-                        <a href=""><i class='bx bx-link-external' ></i></a>
+                        <a href="https://gameplayers.netlify.app/"><i class='bx bx-link-external' ></i></a>
                     </div>
                 </div>
 
